k8s-manifest/01-gitlab-deployment-service.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - name: gitlab
        image: "gitlab/gitlab-ce:latest"  # O "gitlab-ee" si tienes licencia
        ports:
        - containerPort: 80   # HTTP
        - containerPort: 443  # HTTPS
        - containerPort: 22   # SSH
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
spec:
  selector:
    app: gitlab
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: ssh
    port: 22
    targetPort: 22
  type: ClusterIP
